minio/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
spec:
  selector:
    matchLabels:
      app: minio
  serviceName: "minio"
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  replicas: 3
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio
        args:
        - server
        - http://minio-{0...2}.minio.minio.svc.cluster.local/data{0...1}
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: data0
          mountPath: /data0
        - name: data1
          mountPath: /data1
  volumeClaimTemplates:
  - metadata:
      name: data0
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 35Gi
  - metadata:
      name: data1
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 35Gi
