minio/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio
spec:
  rules:
  - host: minio.ns.wg 
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 9000
